--- a/app/views/posts/_narrow_post_list.html.erb
+++ b/app/views/posts/_narrow_post_list.html.erb
@@ -12,6 +12,8 @@
         <%= training_icon_link(post.training_id)%>
       <%elsif !post.match_id.nil?%>
         <%= match_icon_link(post.match_id)%>
+      <%elsif !post.sided_match_id.nil?%>
+        <%= sided_match_icon_link(post.sided_match_id)%>
       <%else%>
         <%= "&nbsp;"%>
       <%end%>
