--- a/app/views/match_invitations/edit.html.erb
+++ b/app/views/match_invitations/edit.html.erb
@@ -3,6 +3,20 @@
   <%= javascript_include_tag football_ground_select_url %>
 <%end%>
 
+<%content_for(:stylesheet) do%>
+  <style>
+    .football_ground_select select {
+      width: 90px;
+    }
+
+    .football_ground_select .province_city_select select {
+      width: 70px;
+    }
+  </style>
+<%end%>
+
+
+
 <div id="narrow_right_content" style="width:290px;">
   <div class="sect">
     <h2></h2>
@@ -67,14 +81,7 @@
           :start_year => Date.today.year, :end_year => 1.year.since.year, :use_month_numbers => true, :minute_step=>15 })
       %>
       <%
-        if (@unmodified_match_invitation.new_football_ground_id.nil? && !@unmodified_match_invitation.football_ground_id.nil?) ||
-            (!@unmodified_match_invitation.new_football_ground_id.nil? && @unmodified_match_invitation.football_ground_id.nil?)
-          is_modified = true
-        elsif !@unmodified_match_invitation.new_football_ground_id.nil? && !@unmodified_match_invitation.football_ground_id.nil?
-          is_modified = @unmodified_match_invitation.has_attribute_been_modified?(:football_ground_id)
-        else
-          is_modified = @unmodified_match_invitation.has_attribute_been_modified?(:location)
-        end
+        is_modified = @unmodified_match_invitation.has_attribute_been_modified?(:location)
         cssklass = "class=\"conflict\""
       %>
       <tr>
