--- a/app/views/team_views/show.html.erb
+++ b/app/views/team_views/show.html.erb
@@ -134,7 +134,7 @@
 
 <div id="right_content">
   <%if @recent_activity != nil%>
-    <div class="sect" style="margin-bottom:30px">
+    <div class="sect">
       <h2><%=h @team.shortname%>最近一次活动</h2>
       <div class="activities">
         <%=date_div_link @recent_activity.start_time, @team%>
