--- a/app/views/trainings/undetermined_users.html.erb
+++ b/app/views/trainings/undetermined_users.html.erb
@@ -1,5 +1,5 @@
 <div id="wide_left_content" class="sect">
-  <h2>尚未决定是否参加<%=link_to @title, training_path(@training)%>的人</h2>
+  <h2>尚未决定是否参加<%=link_to @training_title, training_path(@training)%>的人</h2>
   <%= user_icon(@undetermined_users)%>
 </div>
 
