--- a/app/views/shared/_activity.html.erb
+++ b/app/views/shared/_activity.html.erb
@@ -1,62 +1,128 @@
+<% display_status = logged_in? && (!@user || @user == current_user) %>
+
+<%if activity.class == Training || activity.class == SidedMatch%>
+  <%display_status = display_status && current_user.is_team_member_of?(activity.team)%>
+<%elsif activity.class == Match%>
+  <%display_status = display_status && (current_user.is_team_member_of?(activity.host_team) || current_user.is_team_member_of?(activity.guest_team))%>
+<%end%>
+
 <%if activity.class == Training%>
-<div class="activity training_activity">
+<div class="activity training_activity <%= 'training_activity_narrow' if !(display_status) %>">
   <div class="content">
     <%= link_to activity.team.shortname, team_view_path(activity.team.id) %>训练
     <br/><br/>
     <%= activity.start_time.strftime('%H:%M')%>-<%= activity.end_time.strftime('%H:%M')%>,
     <%= location_link activity.location, activity.football_ground_id %>
     <br/><br/>
+    <%= time_status_text activity%>
+    <%= link_to('详情', training_path(activity)) if !(params[:controller] == "trainings" && params[:action] == "show")%>
+    <br/><br/>
     <%links = []%>
-    <%if logged_in? && (!@user || @user == current_user)%>
-      <%links << link_to('我去', training_training_joins_path(activity), :method=>'post') if activity.can_be_joined_by?(current_user) %>
-      <%links << link_to('我不去', training_training_join_path(activity, 0), :method=>'delete') if activity.can_be_quited_by?(current_user) %>
+    <%if display_status%>
+      <%= join_status_text activity%>&nbsp;&nbsp;&nbsp;
+      <% links_text = join_status_links activity%>
+      <% links << link_to(links_text[0], training_training_joins_path(activity), :method=>'post') if activity.can_be_joined_by?(current_user)%>
+      <% links << link_to(links_text[1], training_training_join_path(activity, 0), :method=>'delete') if activity.can_be_quited_by?(current_user)%>
+      <%= links_with_sticks links%>
     <%end%>
-    <%links << link_to('训练详情', training_path(activity)) if !(params[:controller] == "trainings" && params[:action] == "show")%>
-    <%= links_with_sticks links%>
   </div>
   <div class="activity_icon">
     <%= team_image_link activity.team %>
   </div>
 </div>
-<%elsif activity.class == Match || activity.class == SidedMatch%>
-<div class="activity match_activity">
+<%elsif activity.class == Match %>
+<div class="activity match_activity <%= 'match_activity_narrow' if !(display_status) %>">
   <div class="content">
     <%= link_to(activity.host_team.shortname, team_view_path(activity.host_team_id))%>
     对阵
-    <%= activity.class == Match ? link_to(activity.guest_team.shortname, team_view_path(activity.guest_team_id)) : activity.guest_team_name%>
+    <%= link_to(activity.guest_team.shortname, team_view_path(activity.guest_team_id))%>
     <br/><br/>
     <%= activity.start_time.strftime('%H:%M')%>-<%= activity.end_time.strftime('%H:%M')%>,
     <%= location_link activity.location, activity.football_ground_id%>
     <br/><br/>
-    <%= link_to('比赛详情', activity.class == Match ? match_path(activity) : sided_match_path(activity))%>  
+    <%= time_status_text activity%>
+    <%= link_to('详情', match_path(activity)) if !(params[:controller] == "matches" && params[:action] == "show")%>
+    <br/><br/>
+  </div>
+  <div class="content" style="width: 400px">
+    <%if display_status%>
+      <%if current_user.is_team_member_of?(activity.host_team_id)%>
+        <%links = []%>
+        <%team = activity.host_team%>
+        <%= match_join_status_text activity, team%>&nbsp;&nbsp;&nbsp;
+        <% links_text = match_join_status_links activity, team%>
+        <%links << link_to(links_text[0], 
+          match_joins_path(:team_id => team, :match_id => activity), :method=>:post) if activity.can_be_joined_by?(current_user, team)%>
+        <%links << link_to(links_text[1], 
+          match_join_path(0, :team_id => team, :match_id => activity), :method=>:delete) if activity.can_be_quited_by?(current_user, team)%>
+        <%= links_with_sticks links%>
+     <%end%>
+     <%= "<br/>" if current_user.is_team_member_of?(activity.host_team_id) && current_user.is_team_member_of?(activity.guest_team_id)%>
+     <%if current_user.is_team_member_of?(activity.guest_team_id)%>
+        <%links = []%>
+        <%team = activity.guest_team%>
+        <%= match_join_status_text activity, team%>&nbsp;&nbsp;&nbsp;
+        <% links_text = match_join_status_links activity, team%>
+        <%links << link_to(links_text[0], 
+          match_joins_path(:team_id => team, :match_id => activity), :method=>:post) if activity.can_be_joined_by?(current_user, team)%>
+        <%links << link_to(links_text[1], 
+          match_join_path(0, :team_id => team, :match_id => activity), :method=>:delete) if activity.can_be_quited_by?(current_user, team)%>
+        <%= links_with_sticks links%>
+     <%end%>
+    <%end%>
   </div>
   <div class="activity_icon">
     <%= small_team_image_link activity.host_team, :class=>"host_icon" %>
-    <%= image_tag("vs.gif", :title=>'V.S.', :class=>"vs")%>
-    <%= activity.class == Match ? 
-      small_team_image_link(activity.guest_team, :class=>"guest_icon") : 
-      image_tag('default_user_small.gif', :title=>activity.guest_team_name, :class=>"guest_icon") %>
+    <div class="vs" title="V.S."></div>
+    <%= small_team_image_link(activity.guest_team, :class=>"guest_icon") %>
+  </div>
+</div>
+<%elsif activity.class == SidedMatch%>
+<div class="activity match_activity <%= 'match_activity_narrow' if !(display_status) %>">
+  <div class="content">
+    <%= link_to(activity.host_team.shortname, team_view_path(activity.host_team_id))%>
+    对阵
+    <%= activity.guest_team_name%>
+    <br/><br/>
+    <%= activity.start_time.strftime('%H:%M')%>-<%= activity.end_time.strftime('%H:%M')%>,
+    <%= location_link activity.location, activity.football_ground_id%>
+    <br/><br/>
+    <%= time_status_text activity%>
+    <%= link_to('详情', sided_match_path(activity)) if !(params[:controller] == "sided_matches" && params[:action] == "show")%>
+    <br/><br/>
+    <%links = []%>
+    <%if display_status%>
+      <%= join_status_text activity%>&nbsp;&nbsp;&nbsp;
+      <% links_text = join_status_links activity%>
+      <% links << link_to(links_text[0], sided_match_sided_match_joins_path(activity), :method=>'post') if activity.can_be_joined_by?(current_user)%>
+      <% links << link_to(links_text[1], sided_match_sided_match_join_path(activity, 0), :method=>'delete') if activity.can_be_quited_by?(current_user)%>
+      <%= links_with_sticks links%>
+    <%end%>
+  </div>
+  <div class="activity_icon">
+    <%= small_team_image_link activity.host_team, :class=>"host_icon" %>
+    <div class="vs" title="V.S."></div>
+    <%= image_tag('default_user_small.gif', :title=>activity.guest_team_name, :class=>"guest_icon") %>
   </div>
 </div>
 <%elsif activity.class == Play%>
-<div class="activity play_activity">
+<div class="activity play_activity <%= 'play_activity_narrow' if !(display_status) %>">
   <div class="content">
     <%= smart_nickname @user if @user%>去<%= link_to_if !activity.football_ground_id.nil?, h(activity.location), football_ground_path(activity.football_ground_id)%>随便踢踢
     <br/><br/>
     <%= activity.start_time.strftime('%H:%M')%>-<%= activity.end_time.strftime('%H:%M')%>
     <br/><br/>
-    <%if logged_in? && (!@user || @user == current_user)%>
-      <%= play_status_with_logged_in(activity,current_user)%>
-    <%else%>
-      <%= play_status_with_unlogged_in(activity) %>
-    <%end%>
+    <%= time_status_text activity%>
+    <%= link_to('详情', play_path(activity)) if !(params[:controller] == "plays" && params[:action] == "show")%>
+    <br/><br/>
     <%links = []%>
-    <%if logged_in? && (!@user || @user == current_user) %>
-      <%links << link_to('我也要去', play_play_joins_path(activity), :method=>'post') if activity.can_be_joined_by?(current_user)%>
-      <%links << link_to('我不去了', play_play_join_path(activity,0), :method=>'delete') if activity.can_be_unjoined_by?(current_user)%>
+    <%if display_status%>
+      <%= join_status_text activity%>&nbsp;&nbsp;&nbsp;
+      <% links_text = join_status_links activity%>
+      <% links << link_to(links_text[0], play_play_joins_path(activity), :method=>'post') if activity.can_be_joined_by?(current_user)%>
+      <% links << link_to(links_text[1], play_play_join_path(activity, 0), :method=>'delete') if activity.can_be_quited_by?(current_user)%>
+      <%= links_with_sticks links%>
     <%end%>
-    <%links << link_to('详情', play_path(activity)) if !(params[:controller] == "plays" && params[:action] == "show")%>
-    <%=links_with_sticks links%>
   </div>
   <div class="activity_icon">
     <%= @user ? user_image_link(@user) : image_tag('default_user.gif', :title=>"") %>
