--- a/app/views/matches/_result_form.html.erb
+++ b/app/views/matches/_result_form.html.erb
@@ -20,13 +20,13 @@ end%>
     填写比分: &nbsp;&nbsp;> <a class="switch" href="javascript:void(0)">没有详细比分，填写赛况</a><br />
     
     <div class="result_block">
-      <p>
+      <div style="margin: 10px 0">
         <%=@match.host_team.shortname%>
-        <%= f.text_field host_team_goal_sym, :size=>1 %>
+        <%= f.text_field host_team_goal_sym, :maxlength => 2, :size=>1 %>
         :
-        <%= f.text_field guest_team_goal_sym, :size=>1 %>
+        <%= f.text_field guest_team_goal_sym, :maxlength => 2, :size=>1 %>
         <%=@match.guest_team.shortname%>
-      </p>
+      </div>
 
       <%if !host_team_goal_by_another_team.nil? || !guest_team_goal_by_another_team.nil?%>
         <p>
