--- a/app/views/sided_matches/_team_in_match.erb
+++ b/app/views/sided_matches/_team_in_match.erb
@@ -1,69 +1,35 @@
 <div class="sect">
-  <h2><%=h team.shortname%></h2>
-  <%= small_team_image_link team, :class=>'icon title_icon'%>
-  <%if logged_in?%>
-    <%=link_to_if(match.can_be_edited_by?(current_user),"修改比赛基本信息", edit_sided_match_path(match)){} %>    
-    <%=link_to_if(match.can_be_edited_formation_by?(current_user),"编辑阵型", edit_formation_sided_match_joins_path(:match_id=>match.id)){} %>
-    <%=link_to_if(match.can_be_edited_result_by?(current_user),"填写赛果", edit_result_sided_match_path(match)){} %>
-    <%=link_to_if(match.can_be_destroyed_by?(current_user),"取消比赛", sided_match_path(match), :method=>:delete){} %>
-    <br/><br/>  
-    <%links = []%>
-    <%links << link_to("我要参加", 
-        sided_match_joins_path(:match_id => @match), :method=>:post) if @match.can_be_joined_by?(current_user)%>     
-    <%links << link_to("我不参加了", 
-        sided_match_join_path(0, :match_id => @match), :method=>:delete) if @match.can_be_quited_by?(current_user)%>
-    <%= links_with_sticks links%>
-  <%end%>  
-  <div class="clearBoth"></div>
-</div>
-
-<div class="sect">
-  <h2>阵型</h2>
-  <div class="match_field">
-    <%= image_tag('match_small_field.jpg', :title=>"")%>
-    <%team_player_mjs.each do |ut|%>
-      <% pos = is_host_team ? 
-       match_host_team_field_position(ut.position, formation_array) :
-       match_guest_team_field_position(ut.position, formation_array) %>
-      <%= link_to small_user_image_tag(ut.user,
-        :style=>"left:#{pos[:left]}px;top:#{pos[:top]}px;",
-        :title=>ut.user.nickname), user_view_path(ut.user), :class=>"resize_small_icon" %>
-    <%end%>
-  </div>
-  <div class="clearBoth"></div>
-</div>
-
-<div class="sect">
   <h2>首发名单</h2>
-  <table class="list" style="width:100%">
+  <table class="list player_list">
     <tr>
       <th>&nbsp;</th>
       <th style="width:80px">昵称</th>
-      <th>位置</th>
-      <th>惯用脚</th>
-      <th>身高(cm)</th>
-      <th>体重(kg)</th>
+      <th style="width:60px">位置</th>
     </tr>
     <% (team_player_mjs).each do |ut| %>
       <tr>
         <td><%= tiny_user_image_link ut.user%></td>
-        <td style="width:80px"><%= link_to truncate(h(ut.user.nickname), 12), user_view_path(ut.user)%></td>
-        <td><%= formation_position_text ut.position %></td>
-        <td><%= fitfoot_text ut.user.fitfoot %></td>
-        <td><%= ut.user.height != nil ? ut.user.height : "未知" %></td>
-        <td><%= ut.user.weight != nil ? ut.user.weight : "未知"  %></td>
+        <td style="width:80px"><%= link_to h(ut.user.nickname), user_view_path(ut.user)%></td>
+        <td style="width:60px"><%= formation_position_text ut.position %></td>
       </tr>
     <%end%>
     <% tmp_user = User.new%>
     <%(match.size - team_player_mjs.size).times do%>
      <tr>
-        <td><%= tiny_user_image_tag tmp_user, :title=>''%></td>
+        <td>&nbsp;</td>
         <td style="width:80px">尚未选定</td>
-        <td>?</td>
-        <td>?</td>
-        <td>?</td>
         <td>?</td>
       </tr>
     <%end%>
   </table>
+  <div class="small_field">
+    <%team_player_mjs.each do |ut|%>
+      <% pos = team_field_position(ut.position, formation_array) %>
+      <%= link_to small_user_image_tag(ut.user,
+        :style=>"left:#{pos[:left]}px;top:#{pos[:top]}px;",
+        :title=>ut.user.nickname), user_view_path(ut.user), :class=>"resize_small_icon" %>
+    <%end%>
+    <div class="clearBoth"></div>
+  </div>
+  <div class="clearBoth"></div>
 </div>
