--- a/app/views/sided_matches/edit_result.html.erb
+++ b/app/views/sided_matches/edit_result.html.erb
@@ -1,54 +1,55 @@
-<div>
-  <h1>比赛结果</h1>
+<div id="narrow_right_content" class="sect">
+  <h2></h2>
+  <ul class="sidebar_menu">
+    <li>
+    > <%= link_to '返回比赛详情', sided_match_path(@sided_match)%>
+    </li>
+  </ul>
 </div>
 
-<%= error_messages_for :sided_match %>
+<div id="wide_left_content" class="sect">
+  <h2><%= h @title%></h2>
 
-<% form_for :sided_match, :url=>update_result_sided_match_path(@sided_match), :html=>{:method=>:put} do |f| %>
-  
-<%= hidden_field_tag :team_id, @team.id%>  
+  <%= error_messages_for :sided_match %>
+  <br/>
+  <% form_for @sided_match, :url=>update_result_sided_match_path(@sided_match) do |f| %>
+    <%= render :partial => 'result_form', :locals => {:f => f}%>
+    <br />
 
-    <p>
-      <b><%=@team.shortname%></b>
-      <%= f.text_field :host_team_goal %>
-      :
-      <%= f.text_field :guest_team_goal %>
-      <b><%=@sided_match.guest_team_name%></b>      
-    </p>
-    <p>
-      <b>赛况</b><br />
-      <%= f.radio_button(:situation,SidedMatch::SITUATIONS[0],{:checked=>true})%><%=situation_text(SidedMatch::SITUATIONS[0])%><br />
-      <%for s in SidedMatch::SITUATIONS[1..-1]%>
-          <%= f.radio_button(:situation,s)%><%=situation_text(s)%>
-          <%end%>
-    </p>
+    进球数和得牌情况: <br/>
+    <table class='list' style="width: <%= @sided_match.has_card ? '400px' : '290px'%>">
+      <th>&nbsp;</th>
+      <th style="width:80px">昵称</th>
+      <th style="width:60px">位置</th>
+      <th>进球数</th>
+      <%if @sided_match.has_card%>
+        <th>红黄牌</th>
+      <%end%>
 
-<hr />
-      <table>
-        <th>球员</th>
-        <th>位置</th>
-        <th>入球</th>
-        <th>红/黄牌</th>
-
-        <%for mj in @player_mjs%>
-         <tr>
-            <td><%= user_icon(mj.user)%></td>
-            <td><%= mj.position == nil ? "?" : formation_position_text(mj.position)%></td>
+      <%for mj in @player_mjs%>
+        <tr>
+          <td><%= tiny_user_image_link(mj.user)%></td>
+          <td style="width:80px"><%= link_to h(mj.user.nickname), user_view_path(mj.user)%></td>
+          <td style="width:60px"><%= formation_position_text mj.position %></td>
+          <td>
+            <%= text_field_tag "mj[#{mj.id}][goal]", 
+                @match_join_hash && @match_join_hash[mj.id.to_s] ? @match_join_hash[mj.id.to_s][:goal] : mj.goal,
+                :maxlength => 2, :size=>1%></td>
+          <%if @sided_match.has_card%>
             <td>
-                <%= text_field_tag "mj[#{mj.id}][goal]", 
-                    @match_join_hash && @match_join_hash[mj.id.to_s] ? @match_join_hash[mj.id.to_s][:goal] : mj.goal%></td>
-            <td>
-                <%= select_tag "mj[#{mj.id}][cards]", 
-                    options_for_select(
-                        SidedMatchJoin::CARDS.map {|c| [card_text(c), c]},
-                        @match_join_hash && @match_join_hash[mj.id.to_s] ? @match_join_hash[mj.id.to_s][:cards].to_i : mj.cards)
-                %>
+              <%= select_tag "mj[#{mj.id}][cards]", 
+                  options_for_select(
+                      MatchJoin::CARDS.map {|c| [card_text(c), c]},
+                      @match_join_hash && @match_join_hash[mj.id.to_s] ? @match_join_hash[mj.id.to_s][:cards].to_i : mj.cards)
+              %>
             </td>
-         </tr>
-        <%end%>
-      </table>
+          <%end%>
+        </tr>
+      <%end%>
+    </table>
 
-      <p>
-       <%= f.submit "提交比赛结果" %>
-      </p>
-<% end %>
+    <p><%= f.submit "提交比赛结果" %></p>
+  <% end %>
+</div>
+
+<div class="clearBoth"></div>
