--- a/app/views/users/invite.html.erb
+++ b/app/views/users/invite.html.erb
@@ -13,7 +13,7 @@
   <%= f.text_field :login %></p>
 
   <p><label for="message">留言(可选)</label><br/>
-  <%= f.text_area :message %></p>
+  <%= f.text_area :message, :cols => 40, :rows => 3  %></p>
 
   <p><%= submit_tag '邀请' %></p>
   <% end -%>
