--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -4,13 +4,13 @@
   <% form_for :user, :url => users_path do |f| -%>
 
   <p><label for="email">你的邮箱</label><br/>
-  <%= f.text_field :login %></p>
+  <%= f.text_field :login, :size=>30, :maxlength=>40 %></p>
 
   <p><label for="password">密码</label><br/>
-  <%= f.password_field :password %></p>
+  <%= f.password_field :password, :size=>30, :maxlength=>40 %></p>
 
   <p><label for="password_confirmation">确认密码</label><br/>
-  <%= f.password_field :password_confirmation %></p>
+  <%= f.password_field :password_confirmation, :size=>30, :maxlength=>40 %></p>
 
   <p><%= submit_tag '注册' %></p>
   <% end -%>
