--- a/app/views/football_grounds/_form.html.erb
+++ b/app/views/football_grounds/_form.html.erb
@@ -3,23 +3,23 @@
 <%end%>
 
 <p>
-  <b>名称</b><br />
-  <%= f.text_field :name %>
+  球场名称<br />
+  <%= f.text_field :name, :maxlength=>50, :size=>30 %>
 </p>
 
 <p>
-  <b>所在地</b><br />
+  所在地<br />
   <%= f.province_city_select :city %>
 </p>
 
 <p>
-  <b>球场类型</b><br />
+  球场类型<br />
   <%(1..5).each do |v| %>
      <%= f.radio_button :ground_type, v %><%=ground_type_text(v)%>
   <%end%>
 </p>
 
 <p>
-  <b>描述</b><br />
+  描述<br />
   <%= f.text_area :description %>
 </p>
