--- a/app/views/football_grounds/new.html.erb
+++ b/app/views/football_grounds/new.html.erb
@@ -1,4 +1,4 @@
-<div class="sect">
+<div id="wide_left_content" class="sect">
   <h2><%= h @title%></h2>
   <%= error_messages_for :football_ground %>
 
@@ -12,3 +12,5 @@
     </p>
   <% end %>
 </div>
+
+<div class="clearBoth"></div>
