--- a/app/views/football_grounds/show.html.erb
+++ b/app/views/football_grounds/show.html.erb
@@ -20,7 +20,7 @@
         <%= "<span>球场类型: #{ground_type_text(@football_ground.ground_type)}</span><br/>" unless @football_ground.ground_type.nil?%>
         <%= "<span>已停用</span><br/>" if @football_ground.status == 2%>
         <%if !@football_ground.description.blank?%>
-          <label>球队简介：</label>
+          <label>球队简介:</label>
           <p><%=simple_format auto_link(h(@football_ground.description), :urls)%></p>
         <%end%>
       </div>
