--- a/app/views/match_invitations/edit.html.erb
+++ b/app/views/match_invitations/edit.html.erb
@@ -93,10 +93,11 @@
                 @match_invitation.new_football_ground_id.nil?  ? 'city' : nil,
                 @match_invitation.new_football_ground_id.nil? ? @self_team.city : nil%>
               <br/>
-              <a class="switch" href="javascript:void(0)">场地不在列表中, 点击此处填写地点</a>
+              <a class="switch" href="javascript:void(0)">场地不在列表中, 点击此处填写</a>
             </div>
             <div class="location_text_input">
-              <%= f.text_field :new_location, :value=> @match_invitation.new_football_ground_id.nil? ? @match_invitation.new_location : ''%>
+              <%= f.text_field :new_location, :maxlength => 100, :size => 30,
+                  :value=> @match_invitation.new_football_ground_id.nil? ? @match_invitation.new_location : ''%>
               <br/><a class="switch" href="javascript:void(0)">从列表中选择场地</a>
             </div>
           </div>
@@ -121,11 +122,11 @@
       %>
       <%= macth_invitation_comparison_form_tr(@unmodified_match_invitation, '半场时间', :half_match_length, 
         Proc.new{ |t| "#{t}分钟"}, 
-        Proc.new{ "#{f.text_field :new_half_match_length, :size=>1}分钟"})
+        Proc.new{ "#{f.text_field :new_half_match_length, :maxlength => 2, :size=>1}分钟"})
       %>
       <%= macth_invitation_comparison_form_tr(@unmodified_match_invitation, '中场休息', :rest_length, 
         Proc.new{ |t| "#{t}分钟"}, 
-        Proc.new{ "#{f.text_field :new_rest_length, :size=>1}分钟"})
+        Proc.new{ "#{f.text_field :new_rest_length, :maxlength => 2, :size=>1}分钟"})
       %>
       <%= macth_invitation_comparison_form_tr(@unmodified_match_invitation, '裁判', :has_judge, 
         Proc.new{ |t| t ? '有' : '没有'}, 
