--- a/app/views/messages/new.html.erb
+++ b/app/views/messages/new.html.erb
@@ -17,7 +17,7 @@
       </tr>
       <tr>
         <td><label for="subject">标题: </label></td>
-        <td><%= f.text_field :subject %></td>
+        <td><%= f.text_field :subject, :size=>30, :maxlength=>50 %></td>
       </tr>
       <tr>
         <td><label for="content">内容: </label></td>
