--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,5 +1,5 @@
 <p>
-  标题 <%= f.text_field :title %>
+  标题 <%= f.text_field :title, :size=>30, :maxlength=>100 %>
 </p>
 <p>
   <%= f.check_box :is_private %> 只有本队队友可见
