--- a/app/views/sided_matches/_form.html.erb
+++ b/app/views/sided_matches/_form.html.erb
@@ -15,14 +15,14 @@
     <%= f.datetime_select :start_time,  :start_year => Date.today.year, :end_year => 1.year.since.year, :use_month_numbers => true, :minute_step=>15 %>
   </td></tr>
   <tr><td>
-    选择场地:
+    场地:
   </td><td>
   <div class="location_input">
     <div class="football_ground_input">
       <%= f.football_ground_select :football_ground_id, 
           @sided_match.football_ground_id.nil?  ? 'city' : nil,
           @sided_match.football_ground_id.nil? ? @team.city : nil%><br/>
-      <a class="switch" href="javascript:void(0)">场地不在列表中, 点击此处填写地点</a>
+      <a class="switch" href="javascript:void(0)">场地不在列表中, 点击此处填写</a>
     </div>
     <div class="location_text_input">
       <%= f.text_field :location, :value=> @sided_match.football_ground_id.nil? ? @sided_match.location : '' %>
