--- a/app/views/trainings/_form.html.erb
+++ b/app/views/trainings/_form.html.erb
@@ -15,15 +15,15 @@
 <%= select_minute @training.end_time.nil? ? nil : @training.end_time.min, :prefix => "end_time", :minute_step=>15 %></p>
 
 <div class="location_input">
-  <label for="football_ground_id">选择场地</label><br/>
+  <label for="football_ground_id">场地</label><br/>
   <div class="football_ground_input">
     <%= f.football_ground_select :football_ground_id, 
       @training.football_ground_id.nil?  ? 'city' : nil,
       @training.football_ground_id.nil? ? @team.city : nil%>
-    <a class="switch" href="javascript:void(0)">场地不在列表中, 点击此处填写地点</a>
+    <a class="switch" href="javascript:void(0)">场地不在列表中, 点击此处填写</a>
   </div>
   <div class="location_text_input">
-    <%= f.text_field :location, :value=> @training.football_ground_id.nil? ? @training.location : '' %>
+    <%= f.text_field :location, :maxlength=>100, :size=>30, :value=> @training.football_ground_id.nil? ? @training.location : '' %>
     &nbsp;&nbsp;<a class="switch" href="javascript:void(0)">从列表中选择场地</a>
   </div>
 </div>
