--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -23,7 +23,7 @@
 
   <% form_for(@user,:html => { :class=>"tab"}) do |f| %>
     <p><label for="nickname">昵称</label><br/>
-    <%= f.text_field :nickname %></p>
+    <%= f.text_field :nickname, :size=>30, :maxlength=>15 %></p>
 
     <p><label for="birthday">生日</label><br/>
     <%= f.date_select :birthday, :start_year=>1900, :end_year=>Date.today.year, :use_month_numbers => true %></p>
@@ -38,13 +38,13 @@
     <%= f.province_city_select :city %>
 
     <p><label for="blog">我的blog</label><br/>
-    http://<%= f.text_field :blog %></p>
+    http://<%= f.text_field :blog, :size=>30, :maxlength=>256 %></p>
 
     <p><label for="favorite_star">我喜欢球星</label><br/>
-    <%= f.text_field :favorite_star %></p>
+    <%= f.text_field :favorite_star, :size=>30, :maxlength=>200 %></p>
 
     <p><label for="favorite_team">我喜欢球队</label><br/>
-    <%= f.text_field :favorite_team %></p>
+    <%= f.text_field :favorite_team, :size=>30, :maxlength=>200 %></p>
 
     <p><label for="summary">自我介绍</label><br/>
     <%= f.text_area :summary, :cols=>40, :rows=>15%></p>
@@ -60,10 +60,10 @@
     <label for="is_playable">我踢球</label></p>
 
     <p><label for="height">身高(cm)</label><br/>
-    <%= f.text_field :height, :size=>5 %></p>
+    <%= f.text_field :height, :size=>5, :maxlength=>3 %></p>
 
     <p><label for="weight">体重(kg)</label><br/>
-    <%= f.text_field :weight, :size=>5 %></p>
+    <%= f.text_field :weight, :size=>5, :maxlength=>3 %></p>
 
     <p><label for="fitfoot">惯用脚</label><br/>
     <%= f.select :fitfoot, User::FITFOOT.map {|ft| [fitfoot_text(ft), ft]} %></p>
@@ -109,10 +109,10 @@
   <% form_for(@user,:html => { :class=>"tab" }) do |f| %>
     <%= hidden_field_tag :tab_index, 3%>
     <p><label for="password">密码</label><br/>
-    <%= f.password_field :password %></p>
+    <%= f.password_field :password, :size=>30, :maxlength=>40 %></p>
 
     <p><label for="password_confirmation">确认密码</label><br/>
-    <%= f.password_field :password_confirmation %></p>
+    <%= f.password_field :password_confirmation, :size=>30, :maxlength=>40 %></p>
 
     <p>
       <%= f.submit "保存" %>
