--- a/app/views/users/reset_password.erb
+++ b/app/views/users/reset_password.erb
@@ -4,10 +4,10 @@
   <%= error_messages_for :user %>
   <% form_for :user do |f| %>
     <p><label for="password">密码</label><br/>
-    <%= f.password_field :password %></p>
+    <%= f.password_field :password, :size=>30, :maxlength=>40 %></p>
 
     <p><label for="password_confirmation">确认密码</label><br/>
-    <%= f.password_field :password_confirmation %></p>
+    <%= f.password_field :password_confirmation, :size=>30, :maxlength=>40 %></p>
 
     <p><%= submit_tag '提交' %></p>
   <% end %>
