--- a/app/views/user_views/show.html.erb
+++ b/app/views/user_views/show.html.erb
@@ -124,7 +124,7 @@
     <%else%>
         <%@teams.pop%>
         <%= team_icon(@teams)%>
-        <%= link_to ">> 更多",user_team_joins_path(@user.id), :class=>"more" %>
+        <%= link_to "> 更多",user_team_joins_path(@user.id), :class=>"more" %>
     <%end%>    
     
     <div class="clearBoth"></div>
@@ -137,7 +137,7 @@
     <%else%>
         <%@friends.pop%>
         <%= user_icon(@friends)%>
-        <%= link_to ">> 更多",user_friend_relations_path(@user.id), :class=>"more" %>
+        <%= link_to "> 更多",user_friend_relations_path(@user.id), :class=>"more" %>
     <%end%>
     <div class="clearBoth"></div>
   </div>
