--- a/app/views/shared/_highlight_calendar.html.erb
+++ b/app/views/shared/_highlight_calendar.html.erb
@@ -24,7 +24,7 @@
               <%= img_link%>
             </span>
           <%end%>
-          <%= day_calendar_link(">> 更多", date, @user || @team, :class=>"more") if act_a_day.length > 6%>
+          <%= day_calendar_link("> 更多", date, @user || @team, :class=>"more") if act_a_day.length > 6%>
         <%end%>
       </div>
     </div>
@@ -64,7 +64,7 @@
              </tr>
           <%end%>
           </table>
-          <%= day_calendar_link(">> 更多", date, @user || @team, :class=>"more") if act_a_day.length > 3%>
+          <%= day_calendar_link("> 更多", date, @user || @team, :class=>"more") if act_a_day.length > 3%>
         <%end%>
       </div>
     </div>
@@ -100,7 +100,7 @@
               <%= img_link%>
             </span>
           <%end%>
-          <%= day_calendar_link(">> 更多", date, @user || @team, :class=>"more") if act_a_day.length > 6%>
+          <%= day_calendar_link("> 更多", date, @user || @team, :class=>"more") if act_a_day.length > 6%>
         <%end%>
       </div>
     </div>
