--- a/app/views/layouts/unlogin_layout.html.erb
+++ b/app/views/layouts/unlogin_layout.html.erb
@@ -23,7 +23,10 @@
 </div>
 
 <div id="content">
-<%= yield  %>
+  <%if flash[:notice]%>
+    <div class="flash"><%= flash[:notice] %></div>
+  <%end%>
+  <%= yield  %>
 </div>
 </div>
 </body>
