--- a/public/stylesheets/wefootball.css
+++ b/public/stylesheets/wefootball.css
@@ -265,6 +265,19 @@ form.button-to div {
     margin: 20px 15px 20px 25px;
 }
 
+div.flash{
+/*    background: #ACBE33;*/
+/*    color: #fff;*/
+/*    font-weight: bold;*/
+/*    padding: 6px 10px;*/
+/*    margin: 10px 0px 15px 0px;*/
+/*    border:solid 2px #3D681A;*/
+    background: #F2F7AB;
+    padding: 6px 10px;
+    margin: 10px 0px 15px 0px;
+    width: 500px;
+}
+
 #left_content {
     width:310px; float:left;
 }
