--- a/app/views/layouts/_search_panel.html.erb
+++ b/app/views/layouts/_search_panel.html.erb
@@ -3,18 +3,18 @@
   search_paths = {
   :user => 
     {:image => user_img,
-    :link_to=>"#{link_to(user_img, search_users_path)} #{link_to('用户', search_users_path)}", 
+    :link_to=>"#{link_to(user_img, search_users_path)} #{link_to('用户搜索', search_users_path)}", 
     :url=>search_users_path},
   :team => 
     {:image => team_img,
-    :link_to=>"#{link_to(team_img, search_teams_path)} #{link_to("队伍", search_teams_path)}", 
+    :link_to=>"#{link_to(team_img, search_teams_path)} #{link_to("队伍搜索", search_teams_path)}", 
     :url=>search_teams_path}
 }%>
 <% form_tag search_paths[default][:url], :method=>:post, :id=>"header_search" do%>
   <table><tr>
   <td class="dropdown_container">
     <%= search_paths[default][:image]%>
-    <div class="dropdown" style="top:20px;left:0px;width:60px">
+    <div class="dropdown" style="top:20px;left:0px;width:90px">
       <%search_paths.values.each do |v|%>
         <div>
           <%= v[:link_to]%>
